--- a/package.json
+++ b/package.json
@@ -10,35 +10,36 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.26.9",
-    "@expo/metro-runtime": "~4.0.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "^2.11.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
-    "expo": "~52.0.46",
-    "expo-auth-session": "~6.0.3",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.0",
+    "expo-auth-session": "~6.1.5",
+    "expo-status-bar": "~2.2.3",
     "firebase": "^11.6.0",
     "moment": "^2.30.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-get-random-values": "^1.11.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-razorpay": "^2.3.0",
-    "react-native-reanimated": "^3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "react-router-dom": "^7.5.1"
+    "react-native-web": "^0.20.0",
+    "react-router-dom": "^7.5.1",
+    "expo-random": "undefined"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "expo-module-scripts": "^4.0.5"
   },
   "private": true
